objects/Relationship_Suite__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Suite</relationshipLabel>
        <relationshipName>Relationship_Suite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IMAGE(IF(AND(RM_S__c &gt;15,RM_S__c &lt; 20),&quot;/img/samples/flag_amber.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neutral__c</fullName>
        <formula>IMAGE(IF(AND(RM_S__c &gt;19,RM_S__c &lt; 29),&quot;/img/samples/rating4.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neutral</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Relationship Suite</relationshipLabel>
        <relationshipName>Relationship_Suite</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PP_Result__c</fullName>
        <formula>IF(PP_S__c&lt;16,&apos;Potential Adversary&apos;, IF(AND(PP_S__c&gt;15,PP_S__c&lt;23),&apos;Detractor&apos;, IF(AND(PP_S__c&gt;22,PP_S__c&lt;30),&apos;Neutral&apos;,IF(AND(PP_S__c&gt;29,PP_S__c&lt;36),&apos;Supporter&apos;,IF(PP_S__c&gt;35,&apos;Partner Ally&apos;,&apos;-&apos;))) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Political Power Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_S10__c</fullName>
        <label>PP_S10</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_S11__c</fullName>
        <label>PP_S11</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_S12__c</fullName>
        <label>PP_S12</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <label>Reports To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Ally__c</fullName>
        <formula>IMAGE(IF(AND(RM_S__c &gt;36),&quot;/img/samples/rating5.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Ally</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Political_Advisory__c</fullName>
        <formula>IMAGE(
IF(RM_S__c&lt;16,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Political Advisory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerMatrix__c</fullName>
        <label>Social STyle</label>
        <picklist>
            <picklistValues>
                <fullName>Amiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_S10__c</fullName>
        <label>RM_S10</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_S1__c</fullName>
        <inlineHelpText>1 - Disagree
2 - Somewhat disagree 
3 - Somewhat agree
4 - Agree</inlineHelpText>
        <label>RM_S1</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_S2__c</fullName>
        <label>RM_S2</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_map__c</fullName>
        <label>Relationship map</label>
        <picklist>
            <picklistValues>
                <fullName>Authorizer - Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorizer - Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer - Political Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer - Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justifier-Financial Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justifier-SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operationalizer-End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operationalizer-Internal Enabler</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reports_To_Person_Not_in_List__c</fullName>
        <label>Reports To Person Not in List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporter__c</fullName>
        <formula>IMAGE(IF(AND(RM_S__c &gt;29,RM_S__c &lt; 37),&quot;/img/samples/rating4.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supporter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relationship_map_string__c</fullName>
        <label>relationship map string</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Relationship Suite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Suite</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>